# ot-incident-defender

./: Dockerfile  LICENSE  Meta Hackathon Problem Statement.txt  Meta OpenEnv Hackathon_ Guidelines.txt  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
environment/: __init__.py  env.py  models.py  server.py  tasks.py
environment/plant/: __init__.py  base.py  fdi_centrifuge.py  oldsmar.py  ukraine_grid.py
scenarios/: task1_oldsmar.json  task2_ukraine.json  task3_fdi.json
server/: app.py
tests/: test_graders.py  test_plant_physics.py
