[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ot-incident-defender"
version = "0.1.0"
description = "OpenEnv environment simulating real-world ICS/OT incident response."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "numpy==1.26.4",
    "openai>=2.7.2",
    "requests==2.32.3",
    "openenv-core>=0.2.0",
]

[project.scripts]
ot-incident-defender = "environment.server:app"
server = "environment.server:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "openenv-core",
]
